--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,6 @@ idna==3.10
 multidict==6.4.4
 propcache==0.3.2
 yarl==1.20.1
-python-dotenv
+python-dotenv~=1.1.0
+PyYAML~=6.0.2
+python-json-logger~=3.3.0
